<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
public function up(): void
    {
        Schema::create('users', function (Blueprint $table) {
            $table->id();
            
            // 1. CỘT BẠN CẦN THÊM NẰM Ở ĐÂY
            $table->string('username')->nullable(); 
            
            // 2. CÁC CỘT CHUẨN HÓA THEO THIẾT KẾ CỦA NHÓM (Sửa email/name thành thông tin nhóm)
            $table->string('full_name');
            $table->string('phone_number')->unique();
            $table->string('password_hash');
            $table->string('role')->default('customer');
            $table->boolean('is_active')->default(true);
            
            $table->rememberToken();
            $table->timestamps();
        });

        // 2 bảng mặc định dưới này thì giữ nguyên không đổi
        Schema::create('password_reset_tokens', function (Blueprint $table) {
            $table->string('email')->primary();
            $table->string('token');
            $table->timestamp('created_at')->nullable();
        });

        Schema::create('sessions', function (Blueprint $table) {
            $table->string('id')->primary();
            $table->foreignId('user_id')->nullable()->index();
            $table->string('ip_address', 45)->nullable();
            $table->text('user_agent')->nullable();
            $table->longText('payload');
            $table->integer('last_activity')->index();
        });
    }
    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('users');
        Schema::dropIfExists('password_reset_tokens');
        Schema::dropIfExists('sessions');
    }
};
